# ALSE2110

./: README.md  alex.cpp
Matrices/: CMakeLists.txt  Matrices.pro  divi_dialog.cpp  divi_dialog.h  divi_dialog.ui  main.cpp  matrixmain.cpp  matrixmain.h  matrixmain.ui
Parcial_1/: CMakeLists.txt  datos_devices.txt  device.cpp  device.h  main.cpp
ex0/: CMakeLists.txt  funciones.cpp  world.c
ex1/: CMakeLists.txt  complejo.cpp  complejo2.cpp
ex2/: CMakeLists.txt  complejo.cpp  complejo.h  main.cpp
ex3/: CMakeLists.txt  complex.cpp  complex.h  datos.txt  datos2.txt  main.cpp  main_archivo.cpp  main_in_out.cpp
ex4/: Polinomio.cpp  Polinomio.h  Termino.cpp  main.cpp
ex5/fig_geometricas/: Circulo.cpp  Circulo.h  Triangulo.cpp  main.cpp
ex6/fig_geometricas_file/: Circulo.cpp  Circulo.h  Cuadrado.cpp  Geometrica.cpp  Geometrica.h  Pentagono.cpp  Pentagono.h  Triangulo.cpp  main.cpp
ex7/: output.txt
ex7/filtro_lista/: Filtro.cpp  Filtro.h  main.cpp
ex7/filtro_lista_stl/: Filtro.cpp  main.cpp
ex7/filtro_queue_stl/: Filtro.cpp
lista/: CMakeLists.txt  linkedlist.cpp  linkedlist.h  main.cpp
